--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -166,12 +166,12 @@
                             </sizepolicy>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="4" column="4" rowspan="1" colspan="2">
+                    <widget class="QComboBox" row="4" column="5" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>stripedProgress</cstring>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="4" column="2" rowspan="1" colspan="2">
+                    <widget class="QCheckBox" row="4" column="2" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>gradientPbGroove</cstring>
                         </property>
@@ -184,7 +184,7 @@
                             <cstring>sliderAppearance</cstring>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="4" column="6">
+                    <widget class="QCheckBox" row="4" column="7">
                         <property name="name">
                             <cstring>animatedProgress</cstring>
                         </property>
@@ -192,7 +192,7 @@
                             <string>Animated</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="7" column="2" rowspan="1" colspan="5">
+                    <widget class="QCheckBox" row="7" column="2" rowspan="1" colspan="6">
                         <property name="name">
                             <cstring>lvLines</cstring>
                         </property>
@@ -200,7 +200,7 @@
                             <string>Lines</string>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="2" column="2" rowspan="1" colspan="2">
+                    <widget class="QComboBox" row="2" column="2" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>shadeSliders</cstring>
                         </property>
@@ -213,7 +213,7 @@
                             </sizepolicy>
                         </property>
                     </widget>
-                    <widget class="KColorButton" row="2" column="4" rowspan="1" colspan="2">
+                    <widget class="KColorButton" row="2" column="5" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>customSlidersColor</cstring>
                         </property>
@@ -253,7 +253,7 @@
                             <string>The setting here affects the general appearance - and will be applied to buttons, scrollbars, sliders, combo boxes, and spin buttons.</string>
                         </property>
                     </widget>
-                    <widget class="QLabel" row="6" column="2">
+                    <widget class="QLabel" row="6" column="2" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>textLabel1_8</cstring>
                         </property>
@@ -264,7 +264,7 @@
                             <string>This controls the % that widgets will be highlighted by when the mouse hovers over them</string>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="0" column="2" rowspan="1" colspan="2">
+                    <widget class="QComboBox" row="0" column="2" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>round</cstring>
                         </property>
@@ -274,7 +274,7 @@
                             <cstring>splitters</cstring>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="8" column="2" rowspan="1" colspan="2">
+                    <widget class="QCheckBox" row="8" column="2" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>highlightTab</cstring>
                         </property>
@@ -285,15 +285,7 @@
                             <string>This will cause a coloured stripe to be drawn over the current tab.</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="8" column="4" rowspan="1" colspan="3">
-                        <property name="name">
-                            <cstring>colorSelTab</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Color selected</string>
-                        </property>
-                    </widget>
-                    <widget class="QComboBox" row="3" column="2" rowspan="1" colspan="4">
+                    <widget class="QComboBox" row="3" column="2" rowspan="1" colspan="5">
                         <property name="name">
                             <cstring>sliderThumbs</cstring>
                         </property>
@@ -306,7 +298,7 @@
                             </sizepolicy>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="5" column="2" rowspan="1" colspan="4">
+                    <widget class="QComboBox" row="5" column="2" rowspan="1" colspan="5">
                         <property name="name">
                             <cstring>defBtnIndicator</cstring>
                         </property>
@@ -319,7 +311,7 @@
                             </sizepolicy>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="2" column="7">
+                    <widget class="QCheckBox" row="2" column="8">
                         <property name="name">
                             <cstring>fillSlider</cstring>
                         </property>
@@ -327,17 +319,17 @@
                             <string>Fill used</string>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="2" column="6">
+                    <widget class="QComboBox" row="2" column="7">
                         <property name="name">
                             <cstring>sliderStyle</cstring>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="0" column="4" rowspan="1" colspan="2">
+                    <widget class="QComboBox" row="0" column="5" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>buttonEffect</cstring>
                         </property>
                     </widget>
-                    <widget class="KIntNumInput" row="6" column="3" rowspan="1" colspan="3">
+                    <widget class="KIntNumInput" row="6" column="4" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>highlightFactor</cstring>
                         </property>
@@ -362,7 +354,7 @@
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QCheckBox" row="12" column="2" rowspan="1" colspan="2">
+                    <widget class="QCheckBox" row="12" column="2" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>vArrows</cstring>
                         </property>
@@ -370,7 +362,7 @@
                             <string>'V' style arrows</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="12" column="5" rowspan="1" colspan="3">
+                    <widget class="QCheckBox" row="12" column="6" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>darkerBorders</cstring>
                         </property>
@@ -389,7 +381,7 @@
                             <string>Some applications, such as Qt Designer, and Krita, make use of 'dock windows' These have a handle strip along the top - enabling this option will draw the name of the window in the handle strip.</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="11" column="2" rowspan="1" colspan="3">
+                    <widget class="QCheckBox" row="11" column="2" rowspan="1" colspan="4">
                         <property name="name">
                             <cstring>framelessGroupBoxes</cstring>
                         </property>
@@ -405,7 +397,7 @@
                             <string>Draw statusbar frames</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="11" column="5" rowspan="1" colspan="3">
+                    <widget class="QCheckBox" row="11" column="6" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>stdSidebarButtons</cstring>
                         </property>
@@ -442,14 +434,6 @@
                             </sizepolicy>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="9" column="4" rowspan="1" colspan="3">
-                        <property name="name">
-                            <cstring>xCheck</cstring>
-                        </property>
-                        <property name="text">
-                            <string>'X' style checkmarks</string>
-                        </property>
-                    </widget>
                     <widget class="QLabel" row="9" column="0">
                         <property name="name">
                             <cstring>textLabel1_8_2_2_2</cstring>
@@ -459,14 +443,6 @@
                         </property>
                         <property name="whatsThis" stdset="0">
                             <string>This controls the % that widgets will be highlighted by when the mouse hovers over them</string>
-                        </property>
-                    </widget>
-                    <widget class="KColorButton" row="9" column="2" rowspan="1" colspan="2">
-                        <property name="name">
-                            <cstring>customCheckRadioColor</cstring>
-                        </property>
-                        <property name="text">
-                            <string></string>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="10" column="1">
@@ -483,6 +459,38 @@
                         </property>
                         <property name="whatsThis" stdset="0">
                             <string>This controls the % that widgets will be highlighted by when the mouse hovers over them</string>
+                        </property>
+                    </widget>
+                    <widget class="KColorButton" row="9" column="2">
+                        <property name="name">
+                            <cstring>customCheckRadioColor</cstring>
+                        </property>
+                        <property name="text">
+                            <string></string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="9" column="3" rowspan="1" colspan="3">
+                        <property name="name">
+                            <cstring>xCheck</cstring>
+                        </property>
+                        <property name="text">
+                            <string>'X' style checkmarks</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="8" column="6" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>colorSelTab</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Color selected</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="9" column="6" rowspan="1" colspan="3">
+                        <property name="name">
+                            <cstring>crHighlight</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Highlight background</string>
                         </property>
                     </widget>
                 </grid>
@@ -973,6 +981,7 @@
     <tabstop>shadeCheckRadio</tabstop>
     <tabstop>customCheckRadioColor</tabstop>
     <tabstop>xCheck</tabstop>
+    <tabstop>crHighlight</tabstop>
     <tabstop>titlebarAppearance</tabstop>
     <tabstop>stdFocus</tabstop>
     <tabstop>framelessGroupBoxes</tabstop>
