--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -1215,6 +1215,12 @@
     <tabstop>inactiveHighlight</tabstop>
     <tabstop>passwordChar</tabstop>
     <tabstop>shading</tabstop>
+    <tabstop>gradCombo</tabstop>
+    <tabstop>gradStops</tabstop>
+    <tabstop>gradLightBorder</tabstop>
+    <tabstop>addButton</tabstop>
+    <tabstop>removeButton</tabstop>
+    <tabstop>previewColor</tabstop>
     <tabstop>optionBtn</tabstop>
 </tabstops>
 <layoutdefaults spacing="6" margin="11"/>
